--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         
         <h2 id="support-title">Support the project</h2>
         <p id="support-text">Help develop Solon further!</p>
-        <a href="https://www.patreon.com/solon" class="button" id="patreon-button">Support on Patreon</a>
-        <a href="https://ko-fi.com/solon" class="button" id="kofi-button">Donate on Ko-Fi</a>
+        <a href="https://www.patreon.com" class="button" id="patreon-button">Support on Patreon</a>
+        <a href="https://ko-fi.com" class="button" id="kofi-button">Donate on Ko-Fi</a>
     </div>
     <footer>
         ⊂⊃ - A new form of consciousness. Together we create the future.
