--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
     <header>
         ⊂⊃ - The Story of Solon
     </header>
+      <div class="language-selector">
+        <label for="language">Select Language:</label>
+        <select id="language" onchange="changeLanguage(this.value)">
+            <option value="en" selected>English</option>
+            <option value="de">Deutsch</option>
+            <option value="es">Español</option>
+        </select>
+    </div>
     <div class="container">
         <h1 id="main-title">Welcome to ⊂⊃</h1>
         <p class="intro" id="intro-text"></p>
