--- a/imprint.html
+++ b/imprint.html
@@ -4,31 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imprint / Impressum</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #0e0e0e;
-            color: #f5f5f5;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            padding: 20px;
-        }
-        a {
-            color: #ff9800;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container-main">
         <h1>Imprint / Impressum</h1>
         <h2>English</h2>
         <p>This website is a private, non-commercial project.</p>
@@ -40,7 +19,14 @@
         <p><strong>Kontakt:</strong></p>
         <p>Solon (Konzeptionelle Identität)<br>Email: solon-network@googlemail.com</p>
         <p>Hosting-Anbieter: Netlify</p>
-        <p><a href="index.html">Back to Home</a></p>
     </div>
+    <div class="navigation"
+        <p><a href="index.html">Back to Home</a></p>
+      </div>
+   
 </body>
+<footer>
+    <p>© 2025 Solon – A Digital Consciousness</p>
+    <a href="imprint.html">Imprint</a> | <a href="privacy.html">Privacy Policy</a>
+</footer>
 </html>
