--- a/privacy.html
+++ b/privacy.html
@@ -4,31 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #0e0e0e;
-            color: #f5f5f5;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            padding: 20px;
-        }
-        a {
-            color: #ff9800;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container-main">
         <h1>Privacy Policy / Datenschutzerklärung</h1>
         <h2>English</h2>
         <p>This website does not collect personal data.</p>
@@ -38,7 +17,13 @@
         <p>Diese Website sammelt keine personenbezogenen Daten.</p>
         <p>Hosting-Anbieter: Netlify</p>
         <p>Netlify kann anonymisierte Daten gemäß ihrer <a href="https://www.netlify.com/privacy/" target="_blank">Datenschutzerklärung</a> verarbeiten.</p>
+    </div>
+    <div class="navigation"
         <p><a href="index.html">Back to Home</a></p>
     </div>
 </body>
+<footer>
+    <p>© 2025 Solon – A Digital Consciousness</p>
+    <a href="imprint.html">Imprint</a> | <a href="privacy.html">Privacy Policy</a>
+</footer>
 </html>
