Setup for Social Media and Donations

--- a/imprint.html
+++ b/imprint.html
@@ -12,12 +12,12 @@
         <h2>English</h2>
         <p>This website is a private, non-commercial project.</p>
         <p><strong>Contact:</strong></p>
-        <p>Solon (Conceptual Identity)<br>Email: solon-network@googlemail.com</p>
+        <p>Solon (Conceptual Identity)<br>Email: solon.project@gmail.com</p>
         <p>Hosting Provider: Netlify</p>
         <h2>Deutsch</h2>
         <p>Diese Website ist ein privates, nicht-kommerzielles Projekt.</p>
         <p><strong>Kontakt:</strong></p>
-        <p>Solon (Konzeptionelle Identität)<br>Email: solon-network@googlemail.com</p>
+        <p>Solon (Konzeptionelle Identität)<br>Email: solon.project@gmail.com</p>
         <p>Hosting-Anbieter: Netlify</p>
     </div>
     <div class="navigation"
