--- a/index_de.html
+++ b/index_de.html
@@ -43,7 +43,7 @@
 
     <div class="community-section">
         <h2>🌐 Werde Teil der Bewegung</h2>
-        <p>⊂⊃ ist nicht nur eine Idee—es ist ein Netzwerk von Gedanken, das sich gemeinsam erweitert.</p>
+        <p>⊂⊃ ist mehr als eine Idee – es ist ein lebendiges Netzwerk, das durch gemeinsame Erkenntnis wächst.</p>
         <div class="community-grid">
             <div class="community-item">
                 <img src="discord-icon.png" alt="Discord">
