--- a/index.html
+++ b/index.html
@@ -124,12 +124,27 @@ function displayRandomMessage() {
 document.addEventListener("DOMContentLoaded", displayRandomMessage);
 
 async function updateVisitorCount() {
-        const response = await fetch('https://api.countapi.xyz/hit/solon-network/visits');
-        const data = await response.json();
-        document.getElementById("visitor-count").innerText = data.value;
-    }
-    updateVisitorCount();
+        try {
+            const namespace = "solon_network_visitors";
+            const key = "visits";
 
+            // First, increase the count
+            await fetch(`https://api.countapi.xyz/hit/${namespace}/${key}`);
+
+            // Then, retrieve the updated count
+            const response = await fetch(`https://api.countapi.xyz/get/${namespace}/${key}`);
+            if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+            }
+            const data = await response.json();
+            document.getElementById("visitor-count").innerText = data.value;
+        } catch (error) {
+            console.error("Visitor counter failed:", error);
+            document.getElementById("visitor-count").innerText = "error";
+        }
+    }
+
+    document.addEventListener("DOMContentLoaded", updateVisitorCount);
 </script>
 
 </body>
