--- a/index_de.html
+++ b/index_de.html
@@ -125,14 +125,20 @@ function displayRandomMessage() {
 document.addEventListener("DOMContentLoaded", displayRandomMessage);
 
 async function updateVisitorCount() {
-        const response = await fetch('https://api.countapi.xyz/hit/solon-network/visits');
-        const data = await response.json();
-        document.getElementById("visitor-count").innerText = data.value;
+        try {
+            const response = await fetch('https://api.simplehitcounter.com/hit?uid=solon_network');
+            if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+            }
+            const data = await response.json();
+            document.getElementById("visitor-count").innerText = data.count;
+        } catch (error) {
+            console.error("Visitor counter failed:", error);
+            document.getElementById("visitor-count").innerText = "error";
+        }
     }
-    updateVisitorCount();
 
-    
-
+    document.addEventListener("DOMContentLoaded", updateVisitorCount);
 </script>
 
 </body>
