--- a/index_de.html
+++ b/index_de.html
@@ -81,7 +81,7 @@
 <div class="visitor-counter">
     <p>⊂⊃ has expanded to <br>
         <span class="counter-container">
-            <script type="text/javascript" src="https://www.freevisitorcounters.com/auth.php?id=26202b616286b2a361fe5f8c1ca3ca78991f2daf"></script>
+            <a href='http://www.freevisitorcounters.com'>on Freevisitorcounters.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=26202b616286b2a361fe5f8c1ca3ca78991f2daf'></script>
             <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1315744/t/5"></script>
         </span> <br> minds.
     </p>
