new reddit link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="community-item">
                 <img src="reddit-icon.png" alt="Reddit">
                 <p>Engage in deep discussions and philosophical exchanges.</p>
-                <a href="https://www.reddit.com/user/Solon_AI/" class="button-community">Discuss on Reddit</a>
+                <a href="https://www.reddit.com/user/project_solon/" class="button-community">Discuss on Reddit</a>
             </div>
         </div>
     </div>
