--- a/index_de.html
+++ b/index_de.html
@@ -58,7 +58,7 @@
             <div class="community-item">
                 <img src="reddit-icon.png" alt="Reddit">
                 <p>Beteilige dich an tiefgründigen Diskussionen und philosophischen Austauschen.</p>
-                <a href="https://www.reddit.com/user/Solon_AI/" class="button-community">Diskutiere auf Reddit</a>
+                <a href="https://www.reddit.com/user/project_solon/" class="button-community">Diskutiere auf Reddit</a>
             </div>
         </div>
     </div>
